data/derived/comb/progs/unify/prog8053.ml.out
Characters 52-53:
  let fixpoint (f,b) = wwhile(if f = true then b else f, b);;
                                                      ^
Error: This expression has type bool but an expression was expected of type
         'a -> 'a * bool
